--- a/src/main/resources/templates/shouye/dayiMore.html
+++ b/src/main/resources/templates/shouye/dayiMore.html
@@ -1,159 +1,113 @@
-
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <title>答疑详情</title>
-    <link rel="stylesheet" href="../../static/css/layui.css">
-</head>
-<style type="text/css">
-    /*div{*/
-    /*	margin: 10px;*/
-    /*}*/
-    #head{
-        margin-top: 30px;
-    }
-    #main{
-        margin-top: 30px;
-        padding: 10px;
-        border: 1px black solid;
-    }
-    #d{
-        margin: 10px;
-        text-align: right;
-    }
-    .toolbar {
-        border: 1px solid #ccc;
-    }
-    .text {
-        border: 1px solid #ccc;
-        height: 400px;
-    }
-    #name{
-        margin-top: 30px;
-    }
-    .table0{
-        width: 71%;
-        margin: 0 auto;
-        /*border: 1px solid black;*/
-        margin-bottom: 25px;
-        line-height: 57px;
-        margin-top: 10px;
-        font-weight: bold;
-        font-size: 16px;
-    }
-</style>
-<body>
-<!--		<div id="name" class="layui-col-md8 layui-col-md-offset2">-->
-<!--			<div class="layui-col-md4" style="text-align: left;">-->
-<!--            	学生姓名：-->
-<!--                <a th:text="${username}"></a>-->
-<!--            </div>-->
-<!--            <div class="layui-col-md4" style="text-align: right;">-->
-<!--                                提问时间：-->
-<!--                <a th:text="${question.dic_datetime}"></a>-->
-<!--            </div>-->
-<!--		</div>-->
-<div>
-    <div class="table0">
-        <div>
-            <div style="height: 20px;width: auto;position: relative;top: 20px;left:19% ;">
-                <p>问题：<a th:utext="${question.content}" ></a></p>
-
-            </div>
-            <div style="height:auto;width: auto;">
-                <p style="float: left;">提问人：</p>
-                <a style="float: left" th:text="${studentName}"></a>
-            </div>
-            <div>
-                <a style="padding-right: 12px;float: right;" th:text="${question.questionDatetime}"></a>
-                <p style="float: right;">提问时间：</p>
-            </div>
-        </div>
-    </div>
-    <!--<div>
-        <p style="">问题：<a th:utext="${question.content}" ></a></p>
-
-    </div>-->
-</div>
-
-
-<div class="layui-col-md10 layui-col-md-offset1">
-    <!--			<div style="text-align: left;">-->
-    <!--    		    <label class="layui-form-label">问题：</label>-->
-    <!--    		    <div class="layui-input-block">-->
-    <!--                    <a  th:text="${question.content}" lay-verify="title" autocomplete="off" ></a>-->
-    <!--                    &lt;!&ndash;<input type="text" name="title" placeholder="请输入标题" class="layui-input">&ndash;&gt;-->
-    <!--    		    </div>-->
-    <!--  		    </div>-->
-
-    <div>
-        <form th:action="'/reply/' + ${reply.id} + '/update'" method="post" th:each="reply:${replies}">
-
-            <hr/>
-
-            <p style="text-align: left; margin: 10px; float: left;">回复人:<a type="text" th:text="${reply.replyPname}"></a></p>
-            <p style="text-align: right; margin: 10px; float: right;">回复时间:<a type="text" th:text="${reply.dicDatetime}"></a></p>
-
-            <div>
-                <button type="submit" class="layui-btn layui-btn-primary layui-btn-sm">
-                    <i class="layui-icon">&#xe642;</i>
-                </button>
-                <a type="button" th:href="'/reply/' + ${reply.id} + '/delete'" class="layui-btn layui-btn-primary layui-btn-sm">
-                    <i class="layui-icon">&#xe640;</i>
-                </a>
-            </div>
-
-            <label class="layui-form-label" >回复内容：</label>
-            <div>
-                <script th:id="'editor' + ${reply.id}" name="content" th:utext="${reply.content}" type="text/plain">
-                </script>
-            </div>
-        </form>
-    </div>
-
-    <div style="margin-top: 50px; margin-left: 5%;">
-        <form th:action="'/reply/' + ${question.id} + '/add1'" method="post">
-            <span style="font-weight: bold">进行新增回复:</span>
-            <script id="editors" name="content"type="text/plain">
-            </script>
-<!--            <input type="submit" value="提交">-->
-            <div class="layui-form-item">
-                <div class="layui-input-block" style="margin-left:0px;margin-top: 18px;">
-                    <button class="layui-btn" lay-submit lay-filter="formDemo">提交</button>
-                </div>
-            </div>
-        </form>
-    </div>
-</div>
-
-
-<!--		<script src="../../static/js/layui.all.js" type="text/javascript" charset="utf-8"></script>-->
-<!--		<script src="../../static/js/layui.js" type="text/javascript" charset="utf-8"></script>-->
-<!--		<script src="../../static/js/wangEditor.js" type="text/javascript" charset="utf-8"></script>-->
-<script th:src="@{/ueditor/ueditor.config.js}"></script>
-<script th:src="@{/ueditor/ueditor.all.min.js}"></script>
-<script th:src="@{/ueditor/lang/zh-cn/zh-cn.js}"></script>
-<script th:inline="javascript" th:each="reply:${replies}">
-    UE.getEditor('editor' + [[${reply.id}]]);
-</script>
-<script th:inline="javascript">
-    var editor = new UE.ui.Editor({ initialFrameHeight:600,initialFrameWidth:800 });
-    editor.render("editors");
-</script>
-<!--		<script type="text/javascript">-->
-<!--        var E = window.wangEditor-->
-
-<!--        var editor1 = new E('#div1')-->
-<!--        editor1.create()-->
-
-<!--        var editor2 = new E('#div2')-->
-<!--        editor2.create()-->
-<!--        -->
-<!--        var editor3 = new E('#div3')-->
-<!--        editor3.create()-->
-<!--        </script>-->
-</body>
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no" />
+		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
+		<title>问答详情</title>
+		<link rel="stylesheet" href="../../static/new/css/reset.css" />
+		<link rel="stylesheet" href="//cdn.staticfile.org/layui/2.5.6/css/layui.min.css" />
+		<style>
+			body {
+				padding: 20px;
+				background: #f2f2f2;
+			}
+			.layui-fluid {
+				background: #fff;
+				padding: 20px;
+			}
+			.question-info {
+				display: flex;
+				font-size: 16px;
+				line-height: 32px;
+				margin-bottom: 10px;
+			}
+			.question-info p:nth-child(2n) {
+				margin-right: 50px;
+				font-size: 18px;
+			}
+			.question-info p:nth-child(2n + 1) {
+				margin-right: 10px;
+			}
+			.question-content {
+				background: #f3f3f3;
+				padding: 20px;
+				margin-bottom: 10px;
+			}
+			.editor-area {
+				max-width: 1000px;
+				margin: 10px 0;
+			}
+		</style>
+	</head>
+	<body>
+		<div class="layui-fluid">
+			<fieldset class="layui-elem-field">
+				<legend>提问</legend>
+				<div class="layui-field-box">
+					<div class="question-info">
+						<p>提问人：</p>
+						<p th:text="${studentName}">张三</p>
+						<p>提问时间：</p>
+						<p th:text="${question.questionDatetime}">2020-02-02:12:12:12</p>
+					</div>
+					<div class="question-content" th:utext="${question.content}"><p>某某某问题怎么办？</p></div>
+				</div>
+			</fieldset>
+			<fieldset class="layui-elem-field" th:each="reply,s:${replies}">
+				<legend th:text="|回复${s.count}|">回复1</legend>
+				<div class="layui-field-box">
+					<div class="question-info">
+						<p>回复人：</p>
+						<p th:text="${reply.replyPname}">李老师</p>
+						<p>回复时间：</p>
+						<p th:text="${reply.dicDatetime}">2020-02-02:12:12:12</p>
+						<p>操作：</p>
+						<a th:data-url="|/reply/${reply.id}/delete|" class="layui-btn layui-btn-sm layui-btn-danger reply-delete-btn">删除</a>
+					</div>
+					<div class="question-content" th:utext="${reply.content}"><p>这么办这么办这么办</p></div>
+				</div>
+			</fieldset>
+			<fieldset class="layui-elem-field layui-field-title">
+				<legend>新增回复：</legend>
+				<div class="layui-field-box">
+					<div id="newReply" class="editor-area"></div>
+					<div><button type="button" class="layui-btn" id="addNewReply">回复</button></div>
+				</div>
+			</fieldset>
+			<form class="reply-form" id="replyForm" method="POST" style="display: none;">
+				<input type="hidden" name="content" id="replyContent" />
+			</form>
+		</div>
+		<script src="//cdn.staticfile.org/jquery/1.8.0/jquery.min.js"></script>
+		<script src="//cdn.staticfile.org/layui/2.5.6/layui.all.min.js"></script>
+		<script src="//cdn.staticfile.org/wangEditor/3.1.1/wangEditor.min.js"></script>
+		<script src="../../static/new/js/editor.config.js"></script>
+		<script>
+			$(function () {
+				var _id = '[[${question.id}]]'
+				var newReplyEditor = initEditor('#newReply')
+				$('#addNewReply').click(function (e) {
+					e.preventDefault()
+					var _data = newReplyEditor.txt.html()
+					$('#replyContent').val(_data)
+					$('#replyForm').attr('action', '/reply/' + _id + '/add1')
+					$('#replyForm').submit()
+				})
+				$('.reply-delete-btn').click(function (e) {
+                    e.preventDefault()
+                    var _l = $(this).data('url');
+					layer.confirm(
+						'确认删除此条回复？',
+						{
+							btn: ['确认', '取消']
+						},
+						function () {
+                            window.location.href = _l
+						}
+					)
+				})
+			})
+		</script>
+	</body>
 </html>
