--- a/src/main/resources/templates/user/res.html
+++ b/src/main/resources/templates/user/res.html
@@ -1,58 +1,54 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
-<head>
-    <meta charset="UTF-8">
-    <title>资源管理</title>
-    <script type="text/javascript" th:src="@{/js/jquery-2.1.1.min.js}"></script>
-    <link rel="stylesheet" href="../../static/css/font.css" th:href="@{../../static/css/font.css}">
-    <link rel="stylesheet" href="../../static/css/xadmin.css" th:href="@{../../static/css/xadmin.css}">
-    <link rel="stylesheet" href="../../static/css/layui.css" th:href="@{../../static/css/layui.css}">
-    <script src="../../static/js/layui.js" charset="utf-8" th:src="@{../../static/js/layui.js}"></script>
-    <script type="text/javascript" src="../../static/js/xadmin.js" th:src="@{../../static/js/xadmin.js}"></script>
-    <link rel="stylesheet" href="../../static/css/modules/layer/default/layer.css">
-</head>
-<body>
-<div class="x-nav" style="margin-bottom: 30px">
-          <span class="layui-breadcrumb" style="visibility: visible">
-            <a th:href="@{|/admin/user/list|}">用户列表</a>
-            <span lay-separator>/</span>
-            <a>
-              <cite>查询资源管理</cite></a>
-          </span>
-</div>
-
-<div th:include="user/inc :: head"></div>
-<div class="layui-fluid">
-    <div class="layui-row layui-col-space15">
-        <div class="layui-col-md12">
-            <div class="layui-card">
-                <div class="layui-card-body">
-                    <div class="layui-inline">
-                        <a class="layui-btn layui-btn-primary" th:href="@{|/admin/user/list|}">返回</a>
-                    </div>
-                    <table class="layui-table layui-form">
-
-                        <thead>
-                        <tr>
-                            <td>资源名称</td>
-                            <td>资源url</td>
-                            <td>资源权限字符串</td>
-                        </tr>
-                        </thead>
-                        <tbody>
-
-
-                        <tr th:each="res:${reses}">
-                            <td th:text="${res.name }"></td>
-                            <td th:text="${res.url}"></td>
-                            <td th:text="${res.permission }">&nbsp;</td>
-                        </tr>
-                        </tbody>
-                    </table>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
-</body>
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no" />
+		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
+		<title>资源列表</title>
+		<link rel="stylesheet" href="../../static/new/css/reset.css" />
+		<link rel="stylesheet" href="//cdn.staticfile.org/layui/2.5.6/css/layui.min.css" />
+		<style>
+			body {
+				background: #f2f2f2;
+				padding: 20px;
+			}
+			.layui-fluid {
+				background: #fff;
+				padding: 20px;
+			}
+		</style>
+	</head>
+	<body>
+		<div class="layui-fluid">
+			<table class="layui-table layui-form">
+				<thead>
+					<tr>
+						<td>资源名称</td>
+						<td>资源url</td>
+						<td>资源权限字符串</td>
+					</tr>
+				</thead>
+				<tbody>
+					<tr th:each="res:${reses}">
+						<td th:text="${res.name }"></td>
+						<td th:text="${res.url}"></td>
+						<td th:text="${res.permission }"></td>
+					</tr>
+				</tbody>
+			</table>
+			<div style="text-align: center;">
+				<button type="button" class="layui-btn layui-btn-primary" id="closeIframe">返回</button>
+			</div>
+		</div>
+		<script src="//cdn.staticfile.org/jquery/1.8.0/jquery.min.js"></script>
+		<script src="//cdn.staticfile.org/layui/2.5.6/layui.all.min.js"></script>
+		<script>
+			$(function () {
+				var index = parent.layer.getFrameIndex(window.name)
+				$('#closeIframe').click(function () {
+					parent.layer.close(index)
+				})
+			})
+		</script>
+	</body>
 </html>
